correcao deploy + responsivo + btn down

--- a/static/css/style-new.css
+++ b/static/css/style-new.css
@@ -32,7 +32,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-family: 'Gotham', sans-serif;
   background-image: url('./teste.jpg');
-  
+  background-position: fixed;
 
 }
 ol, ul {
@@ -764,6 +764,7 @@ table {
 }
 .guide .col-12 .col-sm iframe {
   margin-left: 0vh;
+  margin-top: 2vh;
   width: 90%;
 }
 .guide .col-12 .col-sm .btn {
@@ -791,25 +792,27 @@ table {
 
 }
 
-#servicos {
+#map {
   height: auto;
   margin-top: 10vh;
 }
-.servicos .title {
-  font-size: 22px;
-  margin-top: 3vh;
-  background-color: black;
-}
-.servicos .title h3 {
-  font-size: 25px;
-  margin-top: 3vh;
-}
-#servicos .container {
+#map .title {
+  width: 100%;
+  height: 15vh;
+  margin-top: 10vh;
 
-  height: 70vh;
+  text-align: center;
+}
+#map .title h3 {
+  font-size: 20px;
+  margin-top: 3vh;
+}
+#map .container {
+
+  height:auto;
   margin-top: 0vh;
 }
-#servicos .element-item  {
+#map .element-item  {
 
   width: 90%;
   height: 30vh;
@@ -817,7 +820,7 @@ table {
   margin-right: 10%;
 }
 
-#servicos .button-group {
+#map .button-group {
   margin-bottom: 30px;
   height: 10vh;
   width: 100%;
@@ -825,7 +828,7 @@ table {
   margin-right: auto;
 }
 
-#servicos .button-group button {
+#map .button-group button {
   background: none;
   border: none;
   padding: 0;
@@ -835,16 +838,17 @@ table {
   margin-left: 70px;
   outline: none;
   align-items: center;
+  cursor: pointer;
 }
 
-#servicos .button-group button + button {
+#map .button-group button + button {
   margin-left: 50px;
   padding-top: 1vh;
   border-radius: 10px;
   padding: 1vh;
 }
 
-#servicos .button-group button.active {
+#map .button-group button.active {
   color: black;
   background-color: rgba(255, 0, 0, 0.726);
   border-radius: 10px;
@@ -852,40 +856,58 @@ table {
   margin-left: 50px;
 
 }
-#servicos .row {
+#map .row {
 
   height: 50vh;
+  width: 100%;
   margin-top: 10vh;
   margin-left: auto;
   margin-right: auto;
 }
-#servicos .row h2 {
+#map .row .box {
+  margin-left: 5vh;
+  width: 100%;
+}
+#map .row h2 {
 
-  font-size: 22px;
+  font-size: 18px;
+  width: 100%;
   text-align: justify;
   line-height: 50px;
 }
 
 @media (max-width: 550px) {
-  #servicos {
-    height: auto;
+  #map {
+    height: 130vh;
 
   }
-  #servicos .row h2 {
+  #map .title h2 {
+    margin-top: 3vh;
+    font-size: 25px;
+  }
+
+    #map .title h3 {
+      font-size: 12px;
+  }
+  #map .row .box {
+    margin-left: 0vh;
+  }
+  #map .row h2 {
 
     font-size: 18px;
     text-align: justify;
     line-height: 30px;
+    margin-left: 2.5%;
     
   }
-  #servicos .button-group {
+  #map .button-group {
     margin-bottom: 30px;
     height: auto;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
   }
-  #servicos .button-group button {
+  #map .button-group button {
     margin-left: 20px;
     width: 40%;
     padding-top: 1vh;
@@ -893,7 +915,7 @@ table {
     border-radius: 10px;
     padding: 1vh;
   }
-  #servicos .button-group button + button {
+  #map .button-group button + button {
     margin-left: 20px;
     width: 40%;
     padding-top: 1vh;
@@ -901,7 +923,7 @@ table {
     border-radius: 10px;
     padding: 1vh;
   }
-  #servicos .button-group button.active {
+  #map .button-group button.active {
     color: black;
     background-color: rgba(255, 0, 0, 0.726);
     border-radius: 10px;
@@ -915,15 +937,15 @@ table {
 @media (max-width: 300px) {
   
 
-  #servicos .button-group button {
+  #map .button-group button {
     margin-left: 10px;
   }
-  #servicos .button-group button + button {
+  #map .button-group button + button {
     margin-left: 10px;
     width: 40%;
 
   }
-  #servicos .button-group button.active {
+  #map .button-group button.active {
     margin-left: 20px;
   }
   
@@ -932,7 +954,7 @@ table {
 #poster {
   width: 100%;
   height: auto;
-  margin-top: 10vh;
+  margin-top: 15vh;
   display: grid;
 
 }
@@ -941,6 +963,7 @@ table {
   width: 100%;
   height: 100%;
 	display: grid;
+  margin-top: 10vh;
 	grid-template-columns: 1fr 1fr 1fr;
 }
 
@@ -994,7 +1017,7 @@ table {
 @media (max-width:550px) {
   #poster {
     height: auto;
-    margin-top: 40vh;
+    margin-top: 20vh;
   }
   #poster .item {
     width: 100%;
@@ -1022,8 +1045,6 @@ table {
 }
 #grid-template .title h2 {
   font-size: 35px;
-
-  margin-top: 10vh;
 }
 #grid-template .title h3 {
   font-size: 20px;
@@ -1155,15 +1176,33 @@ margin-top: 10vh;
 #btn-down {
   width: 100%;
   height: 5vh;
-  margin-top: 10vh;
+  margin-top: 15vh;
 }
 #btn-down .container{
   width: 5%;
+  margin-top: 5vh;
   height: 100%;
+  margin-left: 47%;
+  margin-right: 47%;
 }
 #btn-down .container img{
   width: 50px;
 }
+@media (max-width: 550px) {
+  #btn-down {
+    width: 100%;
+    height: 5vh;
+    margin-top: 15vh;
+  }
+  #btn-down .container{
+    width: 5%;
+    height: 100%;
+    margin-left: 40%;
+    margin-right: 40%;
+  }
+}
+
+
 @media (max-width:550px) {
   #grid-template {
     margin-top: 20vh;
@@ -1188,12 +1227,10 @@ margin-top: 10vh;
 }
 
 
-
-
 #poema {
   width: 100%;
-  height: 100vh;
-  margin-top: 10vh;
+  height: 110vh;
+  margin-top: 20vh;
   margin-left: 0vh;
   background-color: rgba(0, 0, 0, 0.884);
   color: white;
@@ -1213,6 +1250,9 @@ margin-top: 10vh;
 }
 
 @media (max-width: 550px) {
+  #poema {
+    margin-top: 20vh;
+  }
   #poema .container {
     height: auto;
     position: absolute;
@@ -1265,7 +1305,7 @@ margin-top: 10vh;
 
  #about {
    width: 100%;
-   height: 180vh;
+   height: 150vh;
    position: absolute;
    margin-top: 10vh;
    
@@ -1273,8 +1313,7 @@ margin-top: 10vh;
  }
  #about .container {
   width: 80%;
-  height: 35vh;
-  margin-top: 5vh;
+  height: 30vh;
 
   text-align: center;
   margin-left: 10%;
@@ -1300,7 +1339,7 @@ margin-top: 10vh;
 }
 
 #about .container .forms {
-  width: 60%;
+  width: 80%;
   margin-left: 5%;
   position: absolute;
 }
