refactor: corrigindo link pagina sobre

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto active" href="/home">Home</a></li>
+        <li><a class="nav-link scrollto active" href="/">Home</a></li>
         <li><a class="nav-link scrollto" href="/#carrousel">Introduçao</a></li>
         <li><a class="nav-link scrollto" href="/#guia">Guia</a></li>
         <li><a class="nav-link scrollto" href="/#servicos">Mapa da Violência</a></li>
