--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
   <div class="container d-flex align-items-center justify-content-between">
 
     <div class="logo">
-      <a href="index.html"><img src="#" alt="imagemInicial" class="img-fluid"></a>
+      <a href="index.html"><img src="{% static 'img/unicamp-logo.png' %}" alt="imagemInicial" class="img-fluid"></a>
     </div>
 
     <nav id="navbar" class="navbar">
@@ -18,7 +18,7 @@
         <li><a class="nav-link scrollto active" href="/">Home</a></li>
         <li><a class="nav-link scrollto" href="/#carrousel">Introduçao</a></li>
         <li><a class="nav-link scrollto" href="/#guia">Guia</a></li>
-        <li><a class="nav-link scrollto" href="/#servicos">Mapa da Violência</a></li>
+        <li><a class="nav-link scrollto" href="/#map">Mapa da Violência</a></li>
         <li><a class="nav-link scrollto" href="/#grid-template">+ Conteúdos</a></li>
         <li><a class="nav-link scrollto" href="/#poema">Manifesto</a></li>
         <li><a class="nav-link scrollto" href="/#poema">Sobre</a></li>
