--- a/static/css/style-new.css
+++ b/static/css/style-new.css
@@ -137,6 +137,10 @@ table {
   
     }
   }
+
+  .text-int {
+    color: rgb(221, 76, 9);
+  }
   
   /*--------------------------------------------------------------
   # Navigation Menu
@@ -376,7 +380,7 @@ table {
     font-size: .7vw;
     line-height: 20px;
     font-weight: 400;
-    margin-top: 35vh;
+    margin-top: 25vh;
     text-transform: uppercase;
   }
   #home h4 {
@@ -1053,30 +1057,74 @@ table {
 
 #grid-template .grid {
 display: grid;
+
 }
 
 #grid-template .logo {
-grid-area: logo;
+  grid-area: logo;
+  background-image: url(./img-4.png);
+  opacity: .7;
+}
+#grid-template .logo:hover {
+  opacity: 1;
+  transition: .5s;
 }
 
 #grid-template .nav {
-grid-area: nav;
+  grid-area: nav;
+  background-image: url(./img-6.png);
+  opacity: .7;
+}
+#grid-template .nav:hover {
+  opacity: 1;
+  transition: .2s;
 }
 
 #grid-template .content {
-grid-area: content;
+  grid-area: content;
+  background-image: url(./img-3.png);
+
+  opacity: .7;
+}
+#grid-template .content:hover {
+  opacity: 1;
+  transition: .5s;
 }
 
 #grid-template .sidenav {
-grid-area: sidenav;
+  grid-area: sidenav;
+  background-image: url(./img-1.png);
+  background-position: center;
+  background-size: cover;
+  opacity: .7;
+}
+
+
+#grid-template .sidenav:hover {
+  opacity: 1;
+  transition: .2s;
 }
 
 #grid-template .advert {
-grid-area: advert;
+  grid-area: advert;
+  background-image: url(./img-8.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: .6;
+}
+#grid-template .advert:hover {
+  opacity: .9;
+  transition: .2s;
 }
 
 #grid-template .footer {
-grid-area: footer;
+  grid-area: footer;
+  background-image: url(./img-7.png);
+  opacity: .7;
+}
+#grid-template .footer:hover {  
+  opacity: 1;
+  transition: .2s;
 }
 
 #grid-template .grid-template-areas-1 {
@@ -1159,9 +1207,10 @@ cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   width: 90%;
+  opacity: 1;
 }
 #grid-template .advert h2,#grid-template .footer h2  {
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   margin-top: 10%;
   margin-left: auto;
   margin-right: auto;
@@ -1312,11 +1361,9 @@ margin-top: 10vh;
 
  #about {
    width: 100%;
-   height: 180vh;
+   height: 170vh;
    position: absolute;
    margin-top: 10vh;
-   
-
  }
  #about .container {
   width: 80%;
@@ -1349,15 +1396,70 @@ margin-top: 10vh;
 #about .container .forms {
   width: 80%;
   margin-left: 5%;
+  margin-top: 22%;
   position: absolute;
+}
+#about .container .forms .msg {
+  height: 10vh;
+}
+#Mensagem {
+  height: 80%;
 }
 #footer {
   width: 100%;
   height: 5vh;
   background-color: rgb(54, 52, 52);
   position: absolute;
-  margin-top: 100%;
+  margin-top: 130%;
 }
+#about .container .col-12 {
+  display: flex;
+  height: 55vh;
+  margin-top: 5%;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0 15px 25px -3px rgba(191, 191, 191, 0.877);
+}
+#about .container .col-12 .col-6 {
+  border-radius: 2px;
+}
+#about .container .col-12 .col-6 .container-md {
+  border-radius: 10px;
+  width: 60%;
+  height: 80%;
+  margin-top: -10vh;
+}
+#about .container .col-12 .col-6 .container-md .redes {
+  width: 100%;
+  height: 10%;
+  margin-top: 10%;
+  display: flex;
+  
+}
+#about .container .col-12 .col-6 .container-md .redes .col-2 {
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+#about .container .col-12 .col-6 .container-md .redes .col-2 img {
+  margin-left: -15%;
+  margin-right: auto;
+  cursor: pointer;
+}
+#about .container .col-12 .col-6 .container-md .redes .col-2 .img-lattes {
+  margin-top: -20%;
+  margin-left: -50%;
+  cursor: pointer;
+}
+#about .container .col-12 .col-6 .container-md h2 {
+  margin-top: 50%;
+  font-weight: bold;
+  font-size: 24px;
+}
+#about .container .col-12 .col-6 .container-md h3 {
+  margin-top: 15%;
+}
+
 
 
 #page_text {
@@ -1380,8 +1482,6 @@ margin-top: 10vh;
 #page_text .container .page_title {
   display: inline-block;
   width: 100%;
-
-
 }
 #page_text .container .page_title .col-lm {
 
