--- a/templates/about.html
+++ b/templates/about.html
@@ -33,7 +33,7 @@
 
 <div id="about">
   <div class="container">
-    <h2>Sobre a Pesquisa</h2>
+    <h2>Sobre o Guia</h2>
     <div class="sublime">
 
     </div>
@@ -118,14 +118,21 @@
     
     
   </div>
+
+  <div id="footer-about">
+    <div class="col-2">
+       <a href="https://github.com/andre-bandeli"> <img src="{% static 'img/github.png' %}" width="25px" alt=""></a>
+       <a href="https://www.linkedin.com/in/andrébandeli/"> <img src="{% static 'img/in.png' %}" width="25px" alt=""></a>
+    </div>
+    <di class="col-8">
+     <h4>© 2022 Copyright: André Bandeli</h4>
+    </di>
+    <div class="col-2">
+     
+     </div>
+  
+  </div>
 </div>
-
-
-<div id="footer">
-
-</div>
-
-
 
 
 {% endblock %}
