--- a/templates/template.html
+++ b/templates/template.html
@@ -116,6 +116,7 @@
     </div>
     <div class="col-sm">
       <h2>{{guia_videos.primeiro_texto}}</h2>
+      <h5><span class="pt">Participações: </span> {{guia_videos.segundo_texto}}</h5>
       <h3>{{guia_videos.terceiro_texto}}</h3>
       <button type="button" class="btn btn-danger">Compartilhar</button>
     </div>
@@ -144,7 +145,7 @@
 
       <div class="button-group">
         
-        <button type="button" class="active" data-filter=".sexual">Sexual</button>
+        <button type="button" class="active" data-filter=".sexual">Violência Sexual</button>
         {% for tipos in tipos_violencia %}
         <button type="button"  data-filter=".{{tipos.slug}}"> {{tipos.nome}}</button>
         {% endfor %}
@@ -156,7 +157,7 @@
         <div class="col-10 element-item sexual">
     
           <div class="box">
-              <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora eveniet iure aspernatur animi laborum consequatur repellendus enim rem, numquam facilis unde distinctio nobis, laudantium libero commodi deleniti quaerat nulla! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora eveniet iure aspernatur animi laborum consequatur repellendus enim rem, numquam facilis unde
+              <h2>obrigar ou coagir a mulher a ter ou participar de contato sexualizado, seja físico, verbal ou mesmo forçar a assistir, com uso de força, poder, intimidação, manipulação, chantagem, suborno, ameaça, ou qualquer meio que não seja de livre e espontânea vontade da mulher, incluindo fazê-la ter medo do que pode acontecer se não colaborar ou induzi-la sem que ela esteja em condições de decidir.
               </h2>     
           </div>
 
