--- a/templates/about.html
+++ b/templates/about.html
@@ -67,8 +67,8 @@
       <div class="col-6">
         <div class="container-md">
             <h2>Entre em contato</h2>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-              Eum laborum sapiente odit obcaecati aliquid quam architecto laudantium.</h3>
+            <h3>Em caso de dúvidas, envie-nos um e-mail através do formulário ao lado
+              Se preferir, entre em contato através das minhas redes</h3>
             <div class="redes">
               <div class="col-2 justify-content-between">
                 <img src="{% static 'img/linkedin.png' %}" width="40px" alt="">
