--- a/static/css/style-new.css
+++ b/static/css/style-new.css
@@ -155,21 +155,22 @@ table {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.938);
     border-radius: 10px;
+    margin-left: -30vh;
   }
   .navbar li {
     position: relative;
-    padding-right: 10px;
-
+    padding-right: 5px;
   }
   .navbar a, .navbar a:focus {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 0 10px 30px;
+    padding: 5px 0 5px 20px;
     font-size: 15px;
     color: #151515;
     text-transform: uppercase;
@@ -707,36 +708,42 @@ table {
   margin-top: 10vh;
 
   text-align: center;
-}.guide .title h3 {
-  font-size: 20px;
-  margin-top: 3vh;
 }
 .guide .col-12 {
-  width: 80%;
+  width: 90%;
   height: auto;
-  margin-top: 15vh;
-  margin-left: auto;
+  margin-top: 5vh;
+  margin-left: 5%;
   margin-right: auto;
-
-  display: flex;
+  display: inline-block;
 }
 .guide .col-12 .col-sm {
-  height: 30vh;
+  height: 10vh;
   width: 100%;
+  border-radius: 5px;
+}
+.guide .col-12 .video {
+  height: 50vh;
+  width: 100%;
+
   border-radius: 5px;
 }
 .guide .col-12 .col-sm h2 {
   width: 90%;
   text-align: left;
   font-size: 25px;
-  margin-top: 0vh;
-  margin-left: 3vh;
+  margin-top: 5vh;
+  margin-left: 0vh;
   font-family: 'Gotham', sans-serif;
   color: black;
 }
+.guide .col-12 .col-sm iframe {
+  width: 80%;
+  height: 80%;
+}
 .guide .col-12 .col-sm h5 {
   font-size: 12px;
-  margin-left: 3vh ;
+  margin-left: 0vh ;
   margin-top: 2vh;
 }
 .pt {
@@ -744,9 +751,9 @@ table {
   font-weight: bold;
 }
 .guide .col-12 .col-sm h3 {
-  width: 90%;
+  width: 100%;
   margin-top: 3vh;
-  margin-left: 3vh;
+  margin-left: 0vh;
   margin-right: auto;
   text-align: justify;
   font-size: 16px;
@@ -759,7 +766,7 @@ table {
 .guide .col-12 .col-sm .btn {
   
   margin-top: 4vh;
-  margin-left: 3vh;
+  margin-left: 0vh;
   border: none;
   background-color: rgba(255, 0, 0, 0.726);
 }
@@ -842,6 +849,26 @@ table {
 
 }
 .title h3{
+  font-size: 20px;
+  margin-top: 2vh;
+
+}
+
+#texto-2 .tie-2 {
+  width: 100%;
+  margin-top: 20vh;
+  margin-bottom: 5vh;
+  margin-left: 20vh;
+  text-align: left;
+
+}
+
+#texto-2 .tie-2 h2{
+  font-size: 45px;
+  font-weight: bold;
+
+}
+#texto-2 .tie-2 h3{
   font-size: 20px;
   margin-top: 2vh;
 
@@ -1691,3 +1718,224 @@ margin-top: 10vh;
   text-decoration: none;
 
 }
+
+
+
+#introducao {
+
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    margin-top: 20vh;
+
+}
+#introducao .intro {
+  width: 30%;
+  height: 100%;
+  background-color: red;
+}
+#introducao .intro h2{
+  margin-left: 25vh;
+  margin-top: 35vh;
+  font-size: 3vw;
+  transform: rotate(90deg);
+  color: white;
+}
+#introducao .cont {
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  margin: auto;
+  margin-top: 0vh;
+  background-color: blue;
+}
+
+#introducao .cont h2 {
+  font-size: .95vw;
+  width: 90%;
+  color: rgba(255, 255, 255, 0.76);
+  line-height: 50px;
+  text-align: justify;
+  padding: 1%;
+  margin-top: 10vh;
+
+}
+
+#introducao-t {
+
+  width: 100%;
+  height: auto;
+
+}
+
+#introducao-t .cont-t {
+width: 80%;
+height: auto;
+margin: auto;
+background-repeat: no-repeat;
+background-position: right;
+}
+
+#introducao-t .cont-t h2 {
+font-size: 1.5vw;
+font-weight: bold;
+width: 50%;
+color: black;
+line-height: 50px;
+text-align: justify;
+padding: 1%;
+margin-top: 1vh;
+}
+#introducao-t .cont-t h3 {
+  font-size: .95vw;
+  width: 60%;
+  color: black;
+  line-height: 50px;
+  text-align: justify;
+  padding: 1%;
+  margin-top: 1vh;
+  }
+
+#texto-2 {
+
+  width: 100%;
+  height: 100vh;
+
+}
+
+#texto-2 .cont-texto-2 {
+width: 80%;
+height: auto;
+margin: auto;
+display: flex;
+}
+
+#texto-2 .cont-texto-2 .col-6 {
+  width: 50%;
+  height: 100%;
+}
+
+#texto-2 .cont-texto-2 .col-6  h2 {
+font-size: .95vw;
+line-height: 50px;
+text-align: justify;
+padding: 1%;
+margin-top: 1vh;
+}
+#texto-2 .cont-texto-2 .col-6  iframe {
+  margin-top: 10vh;
+  margin-left: 3vh;
+  }
+
+/*--------------------------------------------------------------
+  # Slider
+--------------------------------------------------------------*/
+.slider {
+
+  width: 100%;
+  height: auto;
+  margin-top: 20vh;
+  background-color: transparent;
+
+}
+.slider .owl-carousel {
+
+  width: 100%;
+  height: 100%;  
+  margin-top: 10vh;
+}
+.slider .owl-carousel .item {
+
+  width: 80%;
+  height: 100%;
+  margin: auto;
+  margin-bottom: 5vh;
+  border: none;
+  display: flex;
+}
+
+.slider .owl-carousel .item .box {
+
+  width: 50%;
+  display: inline;
+  font-family: 'Gotham', sans-serif;
+  cursor: pointer;
+}
+
+.slider .owl-carousel .item .box h4 {
+
+  width: 90%;
+  text-align: justify;
+  margin-top: 5vh;
+  margin-right: auto;
+  font-size: 1vw;
+  line-height: 50px;
+  color: rgb(0, 0, 0);
+
+}
+
+
+@media (max-width: 1024px) {
+.slider {
+  height: auto;
+}
+.slider .owl-carousel .item{
+  width: 100%;
+  display: inline-block;
+}
+.slider .owl-carousel .item .box h2 {
+ font-size: 30px;
+}
+.slider .owl-carousel .item .box h3 {
+  font-size: 25px;
+}
+.slider .owl-carousel .item .box h4 {
+  font-size: 20px;
+  line-height: 35px;
+}
+.slider .owl-carousel .item .box video {
+  margin-top: 2vh;
+  width: 70%;
+}
+}
+
+@media (max-width: 550px) {
+.slider {
+  height: auto;
+}
+.slider .owl-carousel .item{
+  width: 100%;
+  display: inline-block;
+  margin-top: -5vh;
+}
+.slider .owl-carousel .item .box h2 {
+ font-size: 25px;
+}
+.slider .owl-carousel .item .box h3 {
+  font-size: 18px;
+}
+.slider .owl-carousel .item .box h4 {
+  font-size: 18px;
+  line-height: 30px;
+}
+}
+@media (max-width: 300px) {
+.slider .owl-carousel .item{
+  width: 100%;
+  display: inline-block;
+  margin-top: -10vh;
+}
+.slider .owl-carousel .item .box h2 {
+ font-size: 22px;
+}
+.slider .owl-carousel .item .box h3 {
+  font-size: 15px;
+}
+.slider .owl-carousel .item .box h4 {
+  font-size: 15px;
+  line-height: 30px;
+}
+}
+
+/* End Slider SECTION */ 
+
