--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
     <link href="{% static 'bootstrap/swiper-bundle.min.css' %}" rel="stylesheet">
 
     <link href="{% static 'css/style-new.css' %}" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 
     <!-- Template Main CSS File -->
     
@@ -56,6 +57,7 @@
 
     <script src="{% static 'bootstrap/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/carrousel.js' %}"></script>
+    <script src="{% static 'js/muda-cor.js' %}"></script>
 
   
   
