--- a/templates/template.html
+++ b/templates/template.html
@@ -35,13 +35,19 @@
   
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto active" href="#home">Home</a></li>
-        <li><a class="nav-link scrollto" href="#carrousel">Introduçao</a></li>
-        <li><a class="nav-link scrollto" href="#guia">Guia</a></li>
-        <li><a class="nav-link scrollto" href="#map">Mapa da Violência</a></li>
-        <li><a class="nav-link scrollto" href="#poster">Referências</a></li>
+        <li><a class="nav-link scrollto active" href="#home">Início</a></li>
+        <li><a class="nav-link scrollto" href="#carrousel">Apresentação</a></li>
+        <li><a class="nav-link scrollto" href="#guia">CENA 1: ELAS DERRAMAM</a></li>
+        <li><a class="nav-link scrollto" href="#guia">Introdução</a></li>
+        <li><a class="nav-link scrollto" href="#guia">CENA 2: Acolher</a></li>
+        <li><a class="nav-link scrollto" href="#map">Tipos de Violência</a></li>
+        <li><a class="nav-link scrollto" href="#map">Continuando</a></li>
+        <li><a class="nav-link scrollto" href="#map">Não se Cale</a></li>
+        <li><a class="nav-link scrollto" href="#map">Fluxo</a></li>
+        <li><a class="nav-link scrollto" href="#map">Concluindo...</a></li>
+        <li><a class="nav-link scrollto" href="#map">CENA 3: Juntar as Peças</a></li>
         <li><a class="nav-link scrollto" href="#grid-template">+ Conteúdos</a></li>
-        <li><a class="nav-link scrollto" href="#poema">Manifesto</a></li>
+        <li><a class="nav-link scrollto" href="#poema">"AINDA SEREMOS FELIZES?"</a></li>
         <li><a class="nav-link scrollto" href="/about">Sobre</a></li>
       </ul>
       <img class="bi bi-list mobile-nav-toggle" src="{% static 'img/menu.png' %}"></i>
@@ -106,23 +112,23 @@
 <!-- Features Section -->
 <div class="guide" id="guia">
   <div class="title">
-    <h2>Guia Virtual</h2>
-    <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias fugit tempora officiis quisquam autem error minus totam est, </h3>
+    <h2>CENA 1: Elas derramam</h2>
+    
   </div>
-  {% for guia_videos in guia_videos %}
   <div class="col-12" data-aos="fade-left" data-aos-delay="100">
-    <div class="col-sm">
-      <iframe width="100%" height="100%" src="{{guia_videos.link}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="col-sm video">
+      <iframe  src="https://www.youtube.com/embed/Ew-VruAckjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="col-sm">
-      <h2>{{guia_videos.primeiro_texto}}</h2>
-      <h5><span class="pt">Participações: </span> {{guia_videos.segundo_texto}}</h5>
-      <h3>{{guia_videos.terceiro_texto}}</h3>
+      <h2>#CENA 1</h2>
+      <h5><span class="pt">Participações: </span> CAAC</h5>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Velit accusamus nesciunt unde, repudiandae asperiores est aliquid obcaecati tenetur repellendus 
+        tempore ut accusantium nihil, quod perspiciatis eligendi non beatae, eveniet ex?
+      </h3>
       <button type="button" class="btn btn-danger">Compartilhar</button>
     </div>
   </div>
-  {% endfor %}
-
 
   <section id="btn-down">
     <div class="container">
@@ -134,11 +140,79 @@
 
 <!-- End Features Section -->
 
+
+<!-- Introdução section -->
+
+<section id="introducao">
+  
+  <div class="intro">
+    <h2  data-aos="fade-left" data-aos-delay="1000">INTRODUÇÃO</h2>
+  </div>
+  <div class="cont">
+
+
+    <h2 data-aos="fade-rigth" data-aos-delay="1000"> Todos temos impulsos agressivos em alguma medida, mas direcionar esses impulsos na forma de violência é outra história. 
+      A manifestação da agressividade da forma de VIOLÊNCIA significa utilizar PODER, força física, influências e privilégios 
+      para DOMINAR alguém ou um grupo de pessoas e essa dominação provoca danos significativos: diminui a qualidade de vida de pessoas e 
+      famílias, provoca morte, doenças, lesões, problemas emocionais, psicológicos, espirituais, enfim… é um problema que precisa ser tratado 
+      intersetorialmente, multidisciplinarmente. A violência é social e histórica: em diferentes sociedades e em diferentes tempos, aparece sob 
+      formas diferentes, e aquelas formas que persistem por muuuito tempo são consideradas violência cultural. Essa violência cultural é tão...CULTURAL,
+       assimilada, aprendida de maneira intencional ou não intencional, que é comum nem percebermos direito quando acontece (MINAYO, 2007).
+      Portanto, nosso primeiro passo aqui vai ser tentar identificar algumas formas de violência – no caso, especificamente, 
+      contra a mulher – para depois pensar qual papel podemos exercer na cultura, que é dinâmica, viva, e se transforma constantemente.</h2>
+
+  </div>
+
+</section>
+
+<section id="btn-down">
+  <div class="container">
+    <a href="#poster">
+    <img src="{% static 'img/down.png' %}" alt="imagem_slide"></a>
+  </div>
+</section>
+
+
+<!-- end Introdução section -->
+
+
+<!-- Features Section -->
+<div class="guide" id="guia">
+  <div class="title">
+    <h2>Cena 2: Acolher</h2>
+    
+  </div>
+  <div class="col-12" data-aos="fade-left" data-aos-delay="100">
+    <div class="col-sm video">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Ew-VruAckjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="col-sm">
+      <h2>#CENA 2</h2>
+      <h5><span class="pt">Participações: </span> CAAC</h5>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Velit accusamus nesciunt unde, repudiandae asperiores est aliquid obcaecati tenetur repellendus 
+        tempore ut accusantium nihil, quod perspiciatis eligendi non beatae, eveniet ex?
+      </h3>
+      <button type="button" class="btn btn-danger">Compartilhar</button>
+    </div>
+  </div>
+
+  <section id="btn-down">
+    <div class="container">
+      <a href="#map">
+      <img src="{% static 'img/down.png' %}" alt="botaoParaBaixo"></a>
+    </div>
+  </section>
+</div>
+
+<!-- End Features Section -->
+
+
 <!-- End Features Section -->
   <div id="map" class="block">
     <div class="title">
-      <h2>Mapa da Violência</h2>
-      <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias fugit tempora officiis quisquam autem error minus totam est, </h3>
+      <h2>Tipos de Violência</h2>
+      <h3>A tipificação apresentada a seguir é proposta pela Política Nacional de Enfrentamento à Violência Contra as Mulheres</h3>
     </div>
     <div class="container">
     
@@ -185,43 +259,217 @@
   </section>
   <!-- End Features Section -->
 
-  <section id="poster">
 
- <div class="grid-collum">
-  <div class="item">
-    <a href="{% url 'pages:page_text' %}">
-    <img src="{% static 'img/magoz-education.webp' %}" alt="imagem_slide"></a>
-    <h2>Texto 1 </h2>
-</div>
-<div class="item">
-  <a href="{% url 'pages:page_text_two' %}">
-    <img src="{% static 'img/magoz-our.webp' %}" alt="imagem_slide"></a>
-    <h2>Texto 2</h2>
-</div>
-<div class="item">
-  <a href="{% url 'pages:page_text_three' %}">
-    <img src="{% static 'img/magoz.jpg' %}" alt="imagem_slide"></a>
-    <h2>Texto 3 </h2>
-</div>
- </div>
+<!-- Continuando section -->
 
- 
+<section id="introducao-t">
 
+  <div class="title">
+    <h2></h2>
+    
+  </div>
   
-  </section>
+  <div class="cont-t">
 
-<!-- End Features Section -->
+
+    <h2> Está dando para criar imagens, rememorar cenas ou remeter a vivências no seu ambiente de trabalho? </h2>
+    <h3>
+      A proposta é pensar especificamente na violência contra a mulher enquanto mulher, mas sabemos que é um 
+      fenômeno que se relaciona com outras violências. De acordo com o Manual para Atendimento às Vítimas de Violência
+       na Rede de Saúde Pública do DF (2009), além da violência contra a mulher existe a violência contra crianças e adolescentes, 
+       contra pessoas idosas, violência intrafamiliar, negligência. Síndrome de Munchausen por Procuração, auto-extermínio/suicídio, 
+       outras formas de violência de gênero (que não se restringe à díade homem-mulher… Além desse manual, 
+       podemos pensar em violência contra pessoas com deficiência, abandono, violência obstétrica, violência política, 
+       violência contra orientação sexual e identidade de gênero, RACISMO… E todas as violências aqui listadas se relacionam. 
+    </h3>
+    <h3>
+       Essa violência cultural que perpassa por anos e anos, gerações e gerações, tem um movimento cíclico: aprendemos e reproduzimos 
+       padrões de comportamento violentos, alimentando essas formas prejudiciais de se relacionar. É importante perceber o plano de 
+       fundo maior das relações sociais, históricas, culturais, mas como esta pesquisa de mestrado se ateve somente à violência contra mulher,
+       vamos continuar desenvolvendo aqui essa questão em mais detalhes.
+    </h3>
+
+  </div>
+  
+
+</section>
+
+<!-- Continuando section -->
+
+<section id="texto-2">
+
+  <div class="tie-2">
+    <h2>Não se cale!</h2>
+    
+  </div>
+  
+  <div class="cont-texto-2">
+
+    <div class="col-6">
+      <h2> A violência contra a mulher (assim como outras violências e algumas doenças) são de notificação 
+        compulsória. O que isso significa? Que, como profissionais, não podemos nos calar diante de situações de 
+        suspeita ou confirmação de violência e precisamos avisar os outros serviços. A Portaria nº. 2.406/04/GM do 
+        Ministério da Saúde institui serviço de notificação compulsória de violência contra a mulher, e traz um modelo 
+        de ficha de notificação para preencher com algumas informações como telefone, endereço, nome, 
+        tipo de violência percebido, mesmo que não tenhamos todas as informações. 
+        Com esse documento, alimentamos um sistema de informação em que toda a rede de serviços pode se movimentar para atender essas violências, 
+        tentar minimizar danos, tentar interromper as violências cíclicas.</h2>
+
+        <h2>Falando nisso… você sabia que a Prefeitura Municipal da Estância Turística de Ilha Solteira/SP 
+          possui sua própria ficha de notificação de violência contra a mulher? 
+          Pois é, houve todo um trabalho e encontros de profissionais de diferentes setores para estruturar o 
+          fluxo de atendimento a mulheres que sofreram violência e disso saiu a ficha de notificação.</h2>
+    </div>
+
+    <div class="col-6">
+        <h2>Em resumo: temos um Protocolo de Fluxo de Atendimento a Mulheres Vítimas de Violência que diz 
+          que cada componente da rede de serviços do município tem responsabilidade no 
+          atendimento adequado a mulheres que sofreram violência. Ou seja, não é só CREAS e 
+          Delegacia de Polícia que lidam com essa questão, pois ela pode surgir em diversos lugares. 
+          Vamos assistir a esse vídeo que mostra como os serviços se relacionam:</h2>
+
+          <iframe width="650" height="355" src="https://www.youtube.com/embed/rE_PPsxau5I" title="YouTube video player" frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+  </div>
+
+</section>
 
 <section id="btn-down">
-  <div class="container" style="margin-top: -5vh;">
-    <a href="#grid-template">
+  <div class="container">
+    <a href="#poster">
     <img src="{% static 'img/down.png' %}" alt="imagem_slide"></a>
   </div>
 </section>
+
+
+
+<!-- Continuando section -->
+
+
+
+
+<!-- Carrousel -->
+<div class="slider" id="slider">
+
+
+  <div class="title">
+    <h2>Concluindo</h2>
+    
+  </div>
+  <div class="owl-carousel owl-theme" id="theme-carrousel">
+
+      <div class="item">
+          <div class="box">
+                <h4>Bastante coisa, né? Até agora, já vimos um conceito de violência, 
+                  vários tipos de violência contra a mulher, qual nossa responsabilidade como profissionais 
+                  da rede pública e quem encaminha pra quem e quando! Agora, convenhamos, 
+                  falar sobre violência é uma coisa, outra coisa é lidar com aquele turbilhão de 
+                  emoções quando percebemos que aquela pessoa que está atendendo está possivelmente vivenciando alguma 
+                  violência simplesmente pelo fato dela ser mulher. Violência dói, está presente em todos os locais que permeamos, violência tira a voz. 
+                  Emocionalmente, costuma trazer um impacto para todos os envolvidos.</h4>
+                <h4>Uma das formas de lidar com as emoções desagradáveis e paralisantes é 
+                  procurar conhecer mais sobre o tema, estudar, porque conhecimento liberta. 
+                  O conhecimento pelas mulheres de seus direitos pode libertá-las de situações violentas. Tanto o profissional 
+                  quanto as mulheres podem se beneficiar das informações que estamos discutindo aqui.
+              </h4>
+                  
+            </div>
+          <div>
+      </div>
+          <div class="box">
+            <h4>
+              Quando falamos que violência prejudica a autodeterminação e autoestima da pessoa, 
+              precisamos pensar que nossa atuação como profissionais (que pode reproduzir violência!) 
+              precisa ser no sentido oposto.
+              O atendimento, dentro de suas especificidades, precisa respeitar e 
+              fortalecer sua autonomia. Esse fortalecimento, construção de autonomia, autoconceito, 
+              decisões, deve ser trabalhado por nós, profissionais, 
+              mas precisamos entender que a vida também acontece lá fora. 
+              Felizmente, as pessoas não se resolvem ou se complicam só dentro dos serviços, 
+              mas também na comunidade no geral. 
+              
+            </h4>
+              <h4>Então, para finalizar, 
+              vamos agora ampliar o lugar que ocupamos: somos profissionais que precisamos perceber violências, 
+              precisamos reconhecer nossas violências, trabalhar essas questões em atendimento (e conosco) 
+              e estamos inseridos num município que tem uma dinâmica que envolve bem mais que os serviços. 
+              Fazemos parte da comunidade!</h4>
+              
+          </div>
+      </div>
+
+      <div class="item">
+        <div class="box">
+          <h4>O apoio comunitário e enfrentamento coletivo de situações de violência é um 
+            componente essencial nesta discussão. É sentindo-se pertencente a um corpo coletivo, 
+            identificando e reconhecendo sua própria história, que a pessoa pode criar mais ferramentas para 
+            lidar com as violências sendo que, nessas ferramentas, está incluída a ferramenta humana. 
+          </h4>
+           <h4> O abraço, 
+            o acolhimento, o sentimento de pertença, se estar em um grupo que não vai se julgar, 
+            mas vai se validar nas experiências e pensar caminhos para gerar mais vida, tudo isso compõe esse problema com o qual precisamos lidar. 
+            Os afetos desgostosos precisam de lugar, assim como os afetos agradáveis, as relações de amizade e amor.</h4>
+          </div>
+          <div class="box">
+            <h4><h4>Por fim, quando falamos lá no começo que violência é cultural – está na linguagem, na música, nas relações pessoais, livros, 
+              academia, tudo que e humano –, falamos em como sua manifestação também muda ao longo do tempo. 
+            </h4>
+             <h4> Enquanto pessoas, somos só uma gota d´água num mar vasto e vivido e não pretendemos transformar todo esse oceano que nos envolve e nos 
+              determina. No entanto, não esqueçamos que essa determinação é mútua: podemos produzir, intencionalmente, 
+              ações que modificam nossa realidade. Nos transformamos e transformamos o mundo ao mesmo tempo.</h4>
+        </div>
+      <div>
+         
+
+    </div>
+       
+    </div>
+    
+    </div>
+
+</div>
+<!-- End slider -->
+
+
+<!-- Features Section -->
+<div class="guide" id="guia">
+  <div class="title">
+    <h2>CENA 3: Juntar as peças</h2>
+    
+  </div>
+  <div class="col-12" data-aos="fade-left" data-aos-delay="100">
+    <div class="col-sm video">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Ew-VruAckjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="col-sm">
+      <h2>#CENA 3</h2>
+      <h5><span class="pt">Participações: </span> CAAC</h5>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Velit accusamus nesciunt unde, repudiandae asperiores est aliquid obcaecati tenetur repellendus 
+        tempore ut accusantium nihil, quod perspiciatis eligendi non beatae, eveniet ex?
+      </h3>
+      <button type="button" class="btn btn-danger">Compartilhar</button>
+    </div>
+  </div>
+
+  <section id="btn-down">
+    <div class="container">
+      <a href="#map">
+      <img src="{% static 'img/down.png' %}" alt="botaoParaBaixo"></a>
+    </div>
+  </section>
+</div>
+
+<!-- End Features Section -->
+
+
+
+
   <section id="grid-template">
     <div class="title">
       <h2>Conteúdos Úteis</h2>
-      <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias fugit tempora officiis quisquam autem error minus totam est, </h3>
+      <h3>Sugestões para os profissionais que têm interesse em continuar a leitura sobre o tema</h3>
     </div>
     
       <div>
@@ -250,27 +498,14 @@
     <img src="https://i.gifer.com/6xG.gif" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb KAlRDb" alt="GIF deep shkedimoto animation - animated GIF on GIFER - by Arashigul" 
     data-noaft="1">
     <div class="container">
-      <h2>“A roupa era curta</h2>
-        <h2> Ela merecia.</h2>
-          <h2>O batom vermelho,</h2>
-            <h2>Porte de vadia.</h2>
-              <h2> Provoca o decote.</h2>
-                <h2>  Fere fundo o corte.</h2>
-                  <h2> Morte lenta ao ventre forte.</h2>
-                    <h2> Eu às vezes mudo o meu caminho,</h2>
-                      <h2>  quando vejo que um homem vem em minha direção.</h2>
-                        <h2> Não sei se vem de rosa ou espinho,</h2>
-                          <h2> se é um tapa ou é carinho,</h2>
-                            <h2>o bendito ou agressão”</h2>
-                              <h2> (Amanda Pacífico / Cacau de Sá)</h2>
-     
+      
     </div>
   </section>
 <!-- Video Final -->
 <section id="data-resource">
 
-<video controls poster="{% static 'img/woman-5.avif' %}" class="bg_video">
-  <source src="{% static 'img/woman-1.mp4' %}" type="video/webm">
+<video controls class="bg_video">
+  <source src="{% static 'img/video.mp4' %}" type="video/webm">
 </video>
 </section>
 
